# docs/swagger.yaml
@@ -1,4 +1,13 @@
 definitions:
+  lib.AppErr:
+    properties:
+      message:
+        example: some error
+        type: string
+      status:
+        example: 500
+        type: integer
+    type: object
   lib.ValidationError:
     properties:
       errors:
@@ -32,15 +41,133 @@ definitions:
     - email
     - password
     type: object
+  model.LoginDto:
+    properties:
+      email:
+        example: makc@mail.ru
+        type: string
+      password:
+        example: sdfsdfs222
+        maxLength: 100
+        minLength: 6
+        type: string
+    required:
+    - email
+    - password
+    type: object
+  model.LoginResponse:
+    properties:
+      roles:
+        items:
+          $ref: '#/definitions/model.Role'
+        type: array
+      tokens:
+        $ref: '#/definitions/token.Tokens'
+      user_id:
+        example: 1
+        type: integer
+    type: object
   model.RegistrationResponse:
     properties:
       id:
         example: 1
         type: integer
     type: object
+  model.Role:
+    properties:
+      role_id:
+        example: 1
+        type: integer
+      title:
+        example: ADMIN
+        type: string
+    type: object
+  model.User:
+    properties:
+      email:
+        example: makc@mail.ru
+        type: string
+      password_hash:
+        example: sdfsdfs222
+        maxLength: 100
+        minLength: 6
+        type: string
+      roles:
+        items:
+          $ref: '#/definitions/model.Role'
+        type: array
+      user_id:
+        example: 1
+        type: integer
+    required:
+    - email
+    - password_hash
+    type: object
+  token.Tokens:
+    properties:
+      access_token:
+        type: string
+      refresh_token:
+        type: string
+    type: object
 info:
   contact: {}
 paths:
+  /api/user/:id:
+    get:
+      consumes:
+      - application/json
+      description: Get user by id
+      parameters:
+      - description: id parameter
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/model.User'
+        "400":
+          description: Bad Request
+          schema:
+            items:
+              $ref: '#/definitions/lib.AppErr'
+            type: array
+      summary: Get user by id
+      tags:
+      - users
+  /api/user/login:
+    post:
+      consumes:
+      - application/json
+      description: Login to an account with account data
+      parameters:
+      - description: login in account
+        in: body
+        name: dto
+        required: true
+        schema:
+          $ref: '#/definitions/model.LoginDto'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/model.LoginResponse'
+        "400":
+          description: Bad Request
+          schema:
+            items:
+              $ref: '#/definitions/lib.AppErr'
+            type: array
+      summary: Login
+      tags:
+      - users
   /api/user/registration:
     post:
       consumes:
